syntax = "proto3";

option csharp_namespace = "WareHouseWebApp.Services";

service InventoryService {
  rpc GetItem (ItemRequest) returns (ItemReply);
}

message ItemRequest {
  int32 id = 1;
}

message ItemReply {
  string name = 1;
  int32 quantity = 2;
}